// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header Default 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        SampleTitle
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab1
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            Tab2
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab3
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab4
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Tab5
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots NewFilePage Default 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bqyKOL kgaFQz"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-kstqJO ijxcOu"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hBEYId cHjQsC"
        >
          分析対象のファイルをドラッグアンドドロップするかクリックして選択してください
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
      disabled={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      アップロードして分析を実施
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage Error 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bqyKOL kgaFQz"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-kstqJO ijxcOu"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hBEYId cHjQsC"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh urAEl"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      処理に失敗しました。対象のファイルを確認し、解決しない場合は対象のファイルと以下のメッセージを添えて連絡をください
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage File Selected 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bqyKOL kgaFQz"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-kstqJO ijxcOu"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hBEYId cHjQsC"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh jYZmrU"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      アップロードして分析を実施
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage Loading 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bqyKOL kgaFQz"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-kstqJO ijxcOu"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hBEYId cHjQsC"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
      disabled={true}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={-1}
      type="button"
    >
      <span
        className="MuiCircularProgress-root-lieVZj dvIXuQ MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary"
        role="progressbar"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg-kCBcaX dKLwFq MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle-cFBlhL fuNjJu MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`Storyshots NewFilePage Success 1`] = `
Array [
  <header
    className="MuiPaper-root-jqRKNJ dfuyOL MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root-gCJNDv iubHCy MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionSticky"
  >
    <div
      className="MuiToolbar-root-hLnTOG SHPyl MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular"
    >
      <h5
        className="MuiTypography-root-bWuLxc igmgMd MuiTypography-root MuiTypography-h5"
        onClick={[Function]}
      >
        QuickRoic
      </h5>
    </div>
  </header>,
  <div
    className="MuiPaper-root-jqRKNJ kHBPTd MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1"
  >
    <div
      className="MuiTabs-root-gFfyST jMHJyM MuiTabs-root"
    >
      <div
        className="MuiTabs-scroller-ezWUab iCFIa MuiTabs-scroller MuiTabs-fixed"
        onScroll={[Function]}
        style={
          Object {
            "marginBottom": -0,
            "overflow": "hidden",
          }
        }
      >
        <div
          aria-orientation={null}
          className="MuiTabs-flexContainer-jCMrXh ifWCsM MuiTabs-flexContainer"
          onKeyDown={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            Home
          </button>
          <button
            aria-selected={true}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-selected"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            新規分析
            <span
              className="MuiTabs-indicator-crMgkY kUGqXB MuiTabs-indicator"
              style={Object {}}
            />
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            データ確認
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROIC-WACCグラフ
          </button>
          <button
            aria-selected={false}
            className="MuiButtonBase-root-JTLGk xjigV MuiButtonBase-root Mui-disabled MuiTab-root-bdaqDk emOllg MuiTab-root MuiTab-textColorPrimary Mui-disabled"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            ROICツリー
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sc-bqyKOL kgaFQz"
  >
    <div>
      <div
        className="MuiPaper-root-jqRKNJ gSUtMt MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 sc-kstqJO ijxcOu"
        onBlur={[Function]}
        onClick={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <input
          accept=".xlsx"
          autoComplete="off"
          data-testid="dropzone"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hBEYId cHjQsC"
        >
          <ol>
            <li>
              Sample.xlsx
            </li>
          </ol>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh bjzBGh"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      処理完了
    </button>
  </div>,
]
`;

exports[`Storyshots UploadButton Default 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh jYZmrU"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  SampleText
</button>
`;

exports[`Storyshots UploadButton Disabled 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
  disabled={true}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  SampleText
</button>
`;

exports[`Storyshots UploadButton Error 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedError MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh urAEl"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Error
</button>
`;

exports[`Storyshots UploadButton Loading 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root Mui-disabled MuiButton-root-gxQIQh jYZmrU"
  disabled={true}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    className="MuiCircularProgress-root-lieVZj dvIXuQ MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary"
    role="progressbar"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-kCBcaX dKLwFq MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-cFBlhL fuNjJu MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </span>
</button>
`;

exports[`Storyshots UploadButton Success 1`] = `
<button
  className="MuiButtonBase-root-JTLGk xjigV MuiButton-root MuiButton-contained MuiButton-containedSuccess MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-fullWidth MuiButtonBase-root MuiButton-root-gxQIQh bjzBGh"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Success
</button>
`;
